--- a/index.html
+++ b/index.html
@@ -858,8 +858,8 @@
         <div class="row">
           <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12 order-md-2 order-lg-1">
             <div class="copyright mt-15">
-              <p>Copyright © 2020 | Designed by <a href="https://themeforest.net/user/wpsmasher"
-                  target="_blank">Wpsmasher</a></p>
+              <p>Copyright © 2025 | Designed by <a href="https://themeforest.net/user/wpsmasher"
+                  target="_blank">devmorshed</a></p>
             </div>
 
           </div>
