--- a/index.html
+++ b/index.html
@@ -798,8 +798,8 @@
               </div>
               <div class="footer-info">
                 <ul>
-                  <li>Email: <span class="ml-5">aruk@gmail.com</span></li>
-                  <li>Phone: <span class="ml-5">+948 256 347 968</span></li>
+                  <li>Email: <span class="ml-5">aru......com</span></li>
+                  <li>Phone: <span class="ml-5">+000 000 000 0</span></li>
                 </ul>
                 <p class="pr-65">Subscribe to our newsleter and stay
                   up to date with latest offers and
